fix burger (added highlighted links + overflow)

--- a/src/modules/core/components/header/header-mobile/components/burger-item/burger-item.scss
+++ b/src/modules/core/components/header/header-mobile/components/burger-item/burger-item.scss
@@ -30,3 +30,13 @@
     margin-right: 8px;
   }
 }
+
+.highlighted {
+  color: $primary-orange;
+}
+
+.arrow {
+  color: $primary-orange;
+  flex: 1;
+  text-align: right;
+}
