--- a/src/modules/core/components/header/header-mobile/components/burger/burger.scss
+++ b/src/modules/core/components/header/header-mobile/components/burger/burger.scss
@@ -8,6 +8,8 @@
   width: 100vw;
   background-color: white;
   min-height: 100vh;
+  max-height: 100vh;
+  overflow: auto;
   padding-top: 70px;
 }
 
